#DogForm雏形；待完成；

--- a/LightDogWPF/MainWindow.xaml
+++ b/LightDogWPF/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LightDogWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="277" Width="469" 
+		WindowStartupLocation="CenterScreen"
+		Loaded="Window_Loaded" >
+	<Grid>
+		
+	</Grid>
 </Window>
